2003-04-04  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300-protos.h: Add a prototype for
	compute_a_shift_cc.
	* config/h8300/h8300.c (shift_one): Update the CC status.
	(shift_two): Likewise.
	(output_a_shift_cc): Set cc_inline and cc_special.
	(compute_a_shift_cc): New.
	* config/h8300/h8300.md (shift insns): Use compute_a_shift_cc.

2003-04-04  Richard Henderson  <rth@redhat.com>

	* cse.c (fold_rtx): Fix 03-30 change; do check insn non-null.

2003-04-04  Loren James Rittle  <ljrittle@acm.org>

	* fixinc/inclhack.def (bsd_stdio_attrs_conflict): New.
	* fixinc/fixincl.x: Rebuilt.
	* fixinc/tests/base/stdio.h: Regenerated.

2003-04-04  Nathan Sidwell  <nathan@codesourcery.com>

	* gcov.c (accumulate_line_counts): Fix span tree merge bug.

Fri Apr  4 15:58:52 2003  J"orn Rennecke <joern.rennecke@superh.com>

	* sh.h (ACTUAL_NORMAL_MODE): New macro, broken out of
	(NORMAL_MODE).
	* sh.c (fpscr_set_from_mem): Use ACTUAL_NORMAL_MODE.

2003-04-04  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
	
	* doc/contrib.texi (Contributors): Add entries for Wolfgang
	Bangerth, DJ Delorie, Christian Ehrhardt, Christopher Faylor,
	Nathanael Nerode, Diego Novillo, Hartmut Penner, Volker Reichelt,
	Danny Smith, and Ulrich Weigand.
	Update Kriang Lerdsuwanakij and fix a typo in Janis Johnson's
	entry.

2003-04-04  Nick Clifton  <nickc@redhat.com>

	* config/sparc/sol2-bi.h: Revert previous delta.
	* config/sparc/sol2-gas-bi.h (AS_SPARC64_FLAG): Prepend -TSO

2003-04-04  Nick Clifton  <nickc@redhat.com>

	* config/v850/v850.c (expand_prologue): Only use register save
	helper functions if long calls are not being used.
	Add a clobber of r11 id using long calls.
	(pattern_is_ok_for_prologue): Account for the extra clobber.
	(construct_save_jarl): Likewise.
	* config/v850/v850.md (prolog pattern): Do not use this pattern
	for v850e's.

2003-04-04  Andreas Schwab  <schwab@suse.de>

	* stor-layout.c (layout_decl): Avoid syntax error in last change