@@ -1,3 +1,10 @@
+Fri Apr  4 17:33:24 2003  Joel Brobecker  <brobecker@gnat.com>
+
+        * dbxout.c (dbxout_type): When printing type index of range type
+	whose bounds are printed in octal format, print type of parent type if
+	it exists so enumerated type descriptions are not transformed
+        into unsigned types.
+
 2003-04-04  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/h8300/h8300-protos.h: Add a prototype for
